cups (1.5.0-15) UNRELEASED; urgency=low

  * debian/patches/usb-backend-libusb-1.0.patch: Updated the patch to correctly
    generate the make/model string if no device ID could be found. Before,
    arbitrary memory content was picked up, not only giving an ugly listing
    of the ID-less printer in printer setup tools but also a being a potential
    crash bug.

 -- Till Kamppeter <till.kamppeter@gmail.com>  Tue, 17 Jan 2012 11:06:41 +0100

cups (1.5.0-14) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/patches/usb-backend-libusb-1.0.patch: Migrated the "usb" CUPS
    backend to libusb 1.0.x, as libusb 0.1.x is deprecated and not maintained
    upstream any more. Also make printers working independent of what gets
    reported as their device ID, including random characters or nothing. This
    should especially make all USB->Parallel adapters work (LP: #910272).
  * debian/control: Build-depend on libusb-1.0-0-dev instead of on libusb-dev.

  [ Martin Pitt ]
  * debian/local/filters/pdf-filters/pdftoopvp/OPVPOutputDev.{h,cxx}: Drop
    definition of drawLink(). It is not being used anywhere and uses the
    "Link" class which is gone in poppler 0.18.
  * Add debian/patches/ubuntu/poppler-0.18.patch: Port SplashFontEngine()
    constructor call to poppler 0.18 API. Keep it as Ubuntu patch until Debian
    gets poppler 0.18, too. (Closes: #645507)

 -- Martin Pitt <mpitt@debian.org>  Mon, 16 Jan 2012 10:51:53 +0100

cups (1.5.0-13) unstable; urgency=low

  [ Till Kamppeter ]
  * debian/patches/ipp-patch-r8950+.patch: Revert the IPP backend to the state
    of CUPS 1.4.x, as the 1.5.x versiuon has major regressions (LP: #877958,
    LP: #879625, LP: #881843, LP: #883585, Closes: #638521, CUPS STR #3966,
    CUPS STR #3967). This patch will get removed as soon as upstream has fixed
    all these regressions. As upstream did not announce any new features for
    the IPP backend in the release notes for 1.5.x, we assume that with this