@@ -1,5 +1,13 @@
 cups (1.5.0-15) UNRELEASED; urgency=low
 
+  * debian/patches/series,
+    debian/patches/usb-backend-gracefully-fail-on-more-cases-of-bad-device-id.patch,
+    debian/patches/usb-backend-libusb-1.0.patch,
+    debian/patches/usb-backend-skip-set-configuration-set-interface.patch:
+    Added references to the upstream bugs under which these patches got
+    submitted upstream as header comments. Also moved the entries in the series 
+    file to the section of patches submitted upstream.
+
   * debian/patches/usb-backend-libusb-1.0.patch: Updated the patch to correctly
     generate the make/model string if no device ID could be found. Before,
     arbitrary memory content was picked up, not only giving an ugly listing
